content/static/styles.css
/*
I got the following color scheme by searching for the pink color via https://www.colorhexa.com/d02e77:
- Pink: #d02e77
- Blue: #2ec8d0
- Green: #2ed036 (I do not use this color yet though)

I added these colors myself
- Anthracite #2d2d2d (Font color)
- Lightgray #f0f0f0 (Hero panel background color)
- Anthracite #2f2f2f (Footer dark background color)
- Anthracite #222222 (Footer even darker background color)
*/

/* ================ Light Mode ============ */

:root {
  /* Primary link and text colors */
  --linkColor: #d02e77;
  --fontColor: #2d2d2d;
  --bodyBg: #fff;

  /* Logo colors */
  --logoFontColor1: #fff;
  --logoFontColor2: #2d2d2d;

  /* Header colors */
  --headerBg: #2ec8d0;
  --navInactive: #fff;
  --navActive: #2d2d2d;
  --navHover: #2d2d2d;

  /* Hero colors */
  --heroBg: #f0f0f0;

  /* Footer colors */
  --footerBg: #2f2f2f;
  --footerBg2: #222222;
  --footerText: #fff;
  --footerLink: #2ec8d0;

  /* Misc content colors */
  --codeBg: #282c34;
  --blockquoteBorder: rgba(0, 0, 0, 0.25);
  --inlineCodeBg: #f4f3fa;
  --inlineCodeFontColor: #000;
}

/* ================ Dark Mode ============ */

.dark {
  /* Primary link and text colors */
  --linkColor: #2ec8d0;
  --fontColor: #fff;
  --bodyBg: #2f2f2f;

  /* Logo colors */
  --logoFontColor1: #fff;
  --logoFontColor2: #2ec8d0;

  /* Header colors */
  --headerBg: #1f1f1f;
  --navInactive: #fff;
  --navActive: #2ec8d0;
  --navHover: #2ec8d0;

  /* Hero colors */
  --heroBg: #222222;

  /* Footer colors */
  --footerBg: #222222;
  --footerBg2: #1f1f1f;
  --footerText: #fff;
  --footerLink: #2ec8d0;

  /* Misc content colors */
  --codeBg: #282c34;
  --blockquoteBorder: rgba(0, 0, 0, 0.25);
  --inlineCodeBg: #1f1f1f;
  --inlineCodeFontColor: #f4f3fa;
}

/* ================ General ============ */

* {box-sizing: border-box;}

body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Helvetica, Arial, sans-serif;
  color: var(--fontColor);
  background-color: var(--bodyBg);
  transition: background 0.2s linear;
}

.container {
  max-width: 1080px;
  margin: 0 auto;
  padding: 10px;
}

/* ================ Headings ============ */

h2 {
  font-size: 22px;
}

h3 {
  font-size: 20px;
}

h4,
h5 {
  font-size: 18px;
  margin-bottom: 0;
}

/* ================ Links ============ */

a:link,
a:visited {
  text-decoration: none;
  color: var(--linkColor);
}

a:hover {
  text-decoration: underline;
}

a:active {
  text-decoration: none;
  color: var(--linkColor);
}

/* ================ Header ============ */

.header {
  background-color: var(--headerBg);
  padding: 10px;
}

.header-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

/* ================ Logo ============ */

.logo > h1 {
  display: inline;
  margin: 0;
  padding: 0;
  font-size: 30px;
  text-decoration: none;
}

.logo > h1 > a {
  text-decoration: none;
}

a:link .logo-part1,
a:visited .logo-part1,
a:hover .logo-part1,
a:active .logo-part1 {
  color: var(--logoFontColor1)
}

a:link .logo-part2,
a:visited .logo-part2,
a:hover .logo-part2,
a:active .logo-part2 {
  color: var(--logoFontColor2)
}

nav {
  padding-top: 15px;
  min-width: 240px;
  display: flex;
}

ul.nav-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li.nav-item {
  float: left;
  margin-right: 20px;
}

a:link.nav-inactive,
a:visited.nav-inactive {
  color: var(--navInactive)
}

a:hover.nav-inactive {
  color: var(--navHover);
  text-decoration: none;
}

a:active.nav-inactive {
  color: var(--navInactive)
}

a:link.nav-active,
a:visited.nav-active {
  color: var(--navActive)
}

a:hover.nav-active {
  text-decoration: none;
}

a:active.nav-active {
  color: var(--navActive)
}

/* ============== Hero =========== */

.hero {
  background-color: var(--heroBg);
  padding: 10px;
}

.hero-container {
  margin: 0 auto;
  text-align: center;
  max-width: 600px;
}

.hero-container h1 {
  font-size: 24px;
}

.main {
  padding: 10px;
}

/* ================ Content ============ */

blockquote {
  border-left: 7px solid var(--blockquoteBorder);
  margin: 1.5em 10px;
  padding: 1px 10px;
  font-style: italic;
}

code {
  background-color: var(--inlineCodeBg);
  color: var(--inlineCodeFontColor);
  padding: 2px 4px;
}

/* This pre styling is used for code blocks that are syntax highlighted by highlight.js */
pre {
  background: var(--codeBg);
  padding: 7px;
  border-radius: 5px;
}

.page-title,
.blog-title {
  display: inline;
}

.blog-meta {
  font-size: 14px;
  margin-bottom: 20px;
  margin-top: 10px;
}

/* ================ Footer ============ */

footer {
  color: var(--footerText)
}

.footer-row1 {
  background-color: var(--footerBg)
}

.footer-row2 {
  background-color: var(--footerBg2);
  font-size: 12px;
}

.columns {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.column {
  padding: 10px 0px;
  width: 300px;
}

.column > h1 {
  font-size: 20px;
}

.column > p {
  font-size: 14px;
}

ul.sitemap {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.sitemap ul {
  list-style-type: none;
  padding-left: 20px;
}

.column a:link,
.column a:visited,
.column a:hover,
.column a:active {
  color: var(--footerLink); 
  font-size: 14px;
}

/* ================ Light/Dark mode toggle ============ */

.toggle-light-dark-mode {
  border:0;
  background: transparent;
  cursor: pointer;
}

